// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";
package openpitrix;

// set go package name to pb
option go_package = "pb";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "types.proto";


message CreateAppRequest {
	google.protobuf.StringValue name = 1;
	google.protobuf.StringValue version_type = 2;
	google.protobuf.BytesValue version_package = 3;
	map<string, bytes> version_package_files = 4;
}

message CreateAppResponse {
	google.protobuf.StringValue app_id = 1;
	google.protobuf.StringValue version_id = 2;
}

message ModifyAppRequest {
	google.protobuf.StringValue app_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue description = 3;
	google.protobuf.StringValue home = 4;
	google.protobuf.StringValue icon = 5;
	repeated string screenshots = 6;
	google.protobuf.StringValue maintainers = 7;
	google.protobuf.StringValue sources = 8;
	google.protobuf.StringValue readme = 9;
	google.protobuf.StringValue category_id = 10;
	google.protobuf.StringValue keywords = 11;
}

message ModifyAppResponse {
	google.protobuf.StringValue app_id = 1;
}

message DeleteAppsRequest {
	repeated string app_id = 1;
}

message DeleteAppsResponse {
	repeated string app_id = 1;
}

message App {
	google.protobuf.StringValue app_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue repo_id = 3;
	google.protobuf.StringValue description = 4;
	google.protobuf.StringValue status = 5;
	google.protobuf.StringValue home = 6;
	google.protobuf.StringValue icon = 7;
	google.protobuf.StringValue screenshots = 8;
	google.protobuf.StringValue maintainers = 9;
	google.protobuf.StringValue keywords = 10;
	google.protobuf.StringValue sources = 11;
	google.protobuf.StringValue readme = 12;
	google.protobuf.StringValue chart_name = 13;
	google.protobuf.StringValue owner = 14;
	google.protobuf.Timestamp create_time = 15;
	google.protobuf.Timestamp status_time = 16;
	google.protobuf.Timestamp update_time = 17;
	repeated ResourceCategory category_set = 18;
	AppVersion latest_app_version = 19;
}

message DescribeAppsRequest {
	google.protobuf.StringValue search_word = 1;
	google.protobuf.StringValue sort_key = 2;
	google.protobuf.BoolValue reverse = 3;
	uint32 limit = 4;
	uint32 offset = 5;

	repeated string app_id = 11;
	repeated string name = 12;
	repeated string repo_id = 13;
	repeated string status = 14;
	repeated string owner = 15;
	repeated string chart_name = 16;
	repeated string category_id = 17;
}

message DescribeAppsResponse {
	uint32 total_count = 1;
	repeated App app_set = 2;
}

message CreateAppVersionRequest {
	google.protobuf.StringValue app_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue description = 3;
	google.protobuf.StringValue type = 4;
	google.protobuf.BytesValue package = 5;
	map<string, bytes> package_files = 6;
}

message CreateAppVersionResponse {
	google.protobuf.StringValue version_id = 1;
}

message ModifyAppVersionRequest {
	google.protobuf.StringValue version_id = 1;
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue description = 3;
	google.protobuf.BytesValue package = 4;
	map<string, bytes> package_files = 5;
}

message ModifyAppVersionResponse {
	google.protobuf.StringValue version_id = 1;
}

message AppVersion {
	google.protobuf.StringValue version_id = 1;
	google.protobuf.StringValue app_id = 2;
	google.protobuf.StringValue owner = 3;
	google.protobuf.StringValue name = 4;
	google.protobuf.StringValue description = 5;
	google.protobuf.StringValue home = 6;
	google.protobuf.StringValue icon = 7;
	google.protobuf.StringValue screenshots = 8;
	google.protobuf.StringValue maintainers = 9;
	google.protobuf.StringValue keywords = 10;
	google.protobuf.StringValue sources = 11;
	google.protobuf.StringValue readme = 12;
	google.protobuf.StringValue package_name = 13;
	google.protobuf.StringValue status = 14;
	google.protobuf.Timestamp create_time = 15;
	google.protobuf.Timestamp status_time = 16;
	google.protobuf.Timestamp update_time = 17;
	google.protobuf.UInt32Value sequence = 18;
	google.protobuf.StringValue message = 19;
	google.protobuf.StringValue type = 20;
}

message DescribeAppVersionsRequest {
	google.protobuf.StringValue search_word = 1;
	google.protobuf.StringValue sort_key = 2;
	google.protobuf.BoolValue reverse = 3;
	uint32 limit = 4;
	uint32 offset = 5;

	repeated string version_id = 10;
	repeated string app_id = 11;
	repeated string name = 12;
	repeated string owner = 13;
	repeated string description = 14;
	repeated string package_name = 15;
	repeated string status = 16;
}

message DescribeAppVersionsResponse {
	uint32 total_count = 1;
	repeated AppVersion app_version_set = 2;
}

message GetAppVersionPackageRequest {
	google.protobuf.StringValue version_id = 1;
}
message GetAppVersionPackageResponse {
	bytes package = 1;
	google.protobuf.StringValue app_id = 2;
	google.protobuf.StringValue version_id = 3;
}

message GetAppVersionPackageFilesRequest {
	google.protobuf.StringValue version_id = 1;
	repeated string files = 2;
}

message GetAppVersionPackageFilesResponse {
	map<string, bytes> files = 1;
	google.protobuf.StringValue version_id = 2;
}

message GetAppStatisticsRequest {
}

message GetAppStatisticsResponse {
	map<string, uint32> last_two_week_created = 1; // app create time range -> app count, max length is 14
	map<string, uint32> top_ten_repos = 2; // repo id -> app count, max length is 10
	uint32 app_count = 3;
	uint32 repo_count = 4;
}

message SubmitAppVersionRequest {
	google.protobuf.StringValue version_id = 1;
}
message SubmitAppVersionResponse {
	google.protobuf.StringValue version_id = 1;
}
message CancelAppVersionRequest {
	google.protobuf.StringValue version_id = 1;
}
message CancelAppVersionResponse {
	google.protobuf.StringValue version_id = 1;
}
message ReleaseAppVersionRequest {
	google.protobuf.StringValue version_id = 1;
}
message ReleaseAppVersionResponse {
	google.protobuf.StringValue version_id = 1;
}
message DeleteAppVersionRequest {
	google.protobuf.StringValue version_id = 1;
}
message DeleteAppVersionResponse {
	google.protobuf.StringValue version_id = 1;
}
message PassAppVersionRequest {
	google.protobuf.StringValue version_id = 1;
}
message PassAppVersionResponse {
	google.protobuf.StringValue version_id = 1;
}
message RejectAppVersionRequest {
	google.protobuf.StringValue version_id = 1;
	google.protobuf.StringValue message = 2;
}
message RejectAppVersionResponse {
	google.protobuf.StringValue version_id = 1;
}
message SuspendAppVersionRequest {
	google.protobuf.StringValue version_id = 1;
}
message SuspendAppVersionResponse {
	google.protobuf.StringValue version_id = 1;
}
message RecoverAppVersionRequest {
	google.protobuf.StringValue version_id = 1;
}
message RecoverAppVersionResponse {
	google.protobuf.StringValue version_id = 1;
}

message SyncRepoRequest {
	string repo_id = 1;
}
message SyncRepoResponse {
	bool failed = 1;
	string result = 2;
}

service AppManager {
	rpc SyncRepo (SyncRepoRequest) returns (SyncRepoResponse) {
	}
	rpc CreateApp (CreateAppRequest) returns (CreateAppResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "create app"
		};
		option (google.api.http) = {
			post: "/v1/apps"
			body: "*"
		};
	}
	rpc GetAppStatistics (GetAppStatisticsRequest) returns (GetAppStatisticsResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "get app statistics"
		};
		option (google.api.http) = {
			get: "/v1/apps/statistics"
		};
	}
	rpc DescribeApps (DescribeAppsRequest) returns (DescribeAppsResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "describe apps with filter"
		};
		option (google.api.http) = {
			get: "/v1/apps"
		};
	}
	rpc ModifyApp (ModifyAppRequest) returns (ModifyAppResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "modify app"
		};
		option (google.api.http) = {
			patch: "/v1/apps"
			body: "*"
		};
	}
	rpc DeleteApps (DeleteAppsRequest) returns (DeleteAppsResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "delete apps"
		};
		option (google.api.http) = {
			delete: "/v1/apps"
			body: "*"
		};
	}

	rpc CreateAppVersion (CreateAppVersionRequest) returns (CreateAppVersionResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "create app version"
		};
		option (google.api.http) = {
			post: "/v1/app_versions"
			body: "*"
		};
	}
	rpc DescribeAppVersions (DescribeAppVersionsRequest) returns (DescribeAppVersionsResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "describe app versions with filter"
		};
		option (google.api.http) = {
			get: "/v1/app_versions"
		};
	}
	rpc ModifyAppVersion (ModifyAppVersionRequest) returns (ModifyAppVersionResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "modify app version"
		};
		option (google.api.http) = {
			patch: "/v1/app_versions"
			body: "*"
		};
	}
	rpc GetAppVersionPackage (GetAppVersionPackageRequest) returns (GetAppVersionPackageResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "get the package content of app version"
		};
		option (google.api.http) = {
			get: "/v1/app_version/package"
		};
	}
	rpc GetAppVersionPackageFiles (GetAppVersionPackageFilesRequest) returns (GetAppVersionPackageFilesResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			summary: "get the package files content of app version"
		};
		option (google.api.http) = {
			get: "/v1/app_version/package/files"
		};
	}

	rpc SubmitAppVersion (SubmitAppVersionRequest) returns (SubmitAppVersionResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "submit app version"
        };
		option (google.api.http) = {
            post: "/v1/app_version/action/submit"
            body: "*"
        };
	}
	rpc CancelAppVersion (CancelAppVersionRequest) returns (CancelAppVersionResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "cancel app version"
        };
		option (google.api.http) = {
            post: "/v1/app_version/action/cancel"
            body: "*"
        };
	}
	rpc ReleaseAppVersion (ReleaseAppVersionRequest) returns (ReleaseAppVersionResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "release app version"
        };
		option (google.api.http) = {
            post: "/v1/app_version/action/release"
            body: "*"
        };
	}
	rpc DeleteAppVersion (DeleteAppVersionRequest) returns (DeleteAppVersionResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "delete app version"
        };
		option (google.api.http) = {
            post: "/v1/app_version/action/delete"
            body: "*"
        };
	}

	rpc PassAppVersion (PassAppVersionRequest) returns (PassAppVersionResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "pass app version"
        };
		option (google.api.http) = {
            post: "/v1/app_version/action/pass"
            body: "*"
        };
	}
	rpc RejectAppVersion (RejectAppVersionRequest) returns (RejectAppVersionResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "reject app version"
        };
		option (google.api.http) = {
            post: "/v1/app_version/action/reject"
            body: "*"
        };
	}
	rpc SuspendAppVersion (SuspendAppVersionRequest) returns (SuspendAppVersionResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "suspend app version"
        };
		option (google.api.http) = {
            post: "/v1/app_version/action/suspend"
            body: "*"
        };
	}
	rpc RecoverAppVersion (RecoverAppVersionRequest) returns (RecoverAppVersionResponse) {
		option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            summary: "recover app version"
        };
		option (google.api.http) = {
            post: "/v1/app_version/action/recover"
            body: "*"
        };
	}
}
